<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/culcName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:text="@string/Culc"
        android:textColor="@color/black"
        android:textSize="25sp"
        android:layout_marginTop="25dp"
        android:gravity="center_horizontal"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <Button
        android:id="@+id/culcMP"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/CalcPM"
        android:textColor="@color/black"
        android:layout_marginTop="15dp"
        android:layout_below="@+id/btnCulcVes"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <Button
        android:id="@+id/btnCulcPov"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/CalcPov"
        android:layout_below="@+id/culcName"
        android:layout_marginTop="61dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textColor="@color/black"/>

    <Button
        android:id="@+id/btnCulcVes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/CalcVes"
        android:layout_below="@+id/btnCulcPov"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="15dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:textColor="@color/black"/>
</RelativeLayout>