<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_marginTop="15dp"
        android:id="@+id/nm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/CalcPov"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:gravity="center_horizontal"
        android:textSize="25sp"
        android:textColor="@color/black"/>

    <TextView
        android:id="@+id/textMp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/PM"
        android:textSize="18sp"
        android:textColor="@color/black"
        android:gravity="center_horizontal"
        android:layout_marginTop="24dp"
        android:layout_below="@+id/nm"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:id="@+id/textVs"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Ves"
        android:layout_marginTop="21dp"
        android:textSize="18sp"
        android:layout_marginLeft="40dp"
        android:textColor="@color/black"
        android:layout_below="@+id/editMp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:id="@+id/editMp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:inputType="number"
        android:layout_below="@+id/textMp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <EditText
        android:id="@+id/editVs"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:inputType="number"
        android:layout_alignBaseline="@+id/textVs"
        android:layout_alignBottom="@+id/textVs"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_toRightOf="@+id/textVs"
        android:layout_toEndOf="@+id/textVs" />

    <TextView
        android:id="@+id/txtPM"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ProgPov"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:gravity="center_horizontal"
        android:layout_centerVertical="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:id="@+id/res"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:layout_below="@+id/txtPM"
        android:gravity="center_horizontal"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="20dp"/>

    <Button
        android:id="@+id/bSc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnScet"
        android:textColor="@color/black"
        android:layout_above="@+id/bDel"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="10dp"/>

    <Button
        android:id="@+id/bDel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnDel"
        android:textColor="@color/black"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="20dp"/>
</RelativeLayout>