<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/back"
    tools:context=".Activity.Menu.Author">
    <ImageView
        android:id="@+id/image"
        android:layout_width="150dp"
        android:layout_height="250dp"
        android:src="@drawable/avatar"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        />

        <TextView android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_toRightOf="@+id/image"
            android:text="@string/Author"
            android:id="@+id/obAuthor"
            android:textSize="25sp"
            android:layout_marginTop="60dp"
            android:gravity="center_horizontal"
            android:textColor="@color/Text"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" />
    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/FIO"
        android:textSize="18sp"
        android:gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/obAuthor"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:textColor="@color/Text"
        android:layout_toRightOf="@+id/image"
        android:layout_toEndOf="@+id/image" />
    <TextView
        android:id="@+id/textInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/image"
        android:textColor="@color/Text"
        android:text="@string/info"
        android:textSize="16sp"
        android:layout_marginTop="12dp"
        android:gravity="center_horizontal"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:id="@+id/textSoc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:linksClickable="true"
        android:autoLink="all"
        android:textColor="@color/Text"
        android:textColorLink="@color/Link"
        android:text="@string/socsety"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/textInfo"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

</RelativeLayout>