<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_marginTop="15dp"
        android:id="@+id/imya"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/CalcVes"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:gravity="center_horizontal"
        android:textSize="25sp"
        android:textColor="@color/black"/>

    <TextView
        android:id="@+id/tVes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/PM"
        android:textSize="18sp"
        android:textColor="@color/black"
        android:gravity="center_horizontal"
        android:layout_below="@+id/imya"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="25dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:id="@+id/tPov"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Pov"
        android:layout_marginTop="40dp"
        android:textSize="18sp"
        android:textColor="@color/black"
        android:layout_below="@+id/eMP"
        android:layout_marginBottom="12dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:id="@+id/eMP"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:inputType="number"
        android:layout_marginTop="11dp"
        android:layout_below="@+id/tVes"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:id="@+id/ePov"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:inputType="number"
        android:layout_above="@+id/textRV"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_toRightOf="@+id/tPov"
        android:layout_toEndOf="@+id/tPov" />

    <TextView
        android:id="@+id/textRV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/tPov"
        android:text="@string/ProgVes"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:textColor="@color/black"
        android:layout_marginTop="30dp"
        android:textSize="20sp"
        android:gravity="center_horizontal"/>

    <EditText
        android:id="@+id/rslt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:gravity="center_horizontal"
        android:layout_below="@+id/textRV"
        android:layout_marginTop="10dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <Button
        android:id="@+id/scBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnScet"
        android:textColor="@color/black"
        android:layout_above="@+id/delBtn"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="10dp"/>

    <Button
        android:id="@+id/delBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnDel"
        android:textColor="@color/black"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="20dp"/>
</RelativeLayout>