<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_marginTop="15dp"
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/CalcPM"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:gravity="center_horizontal"
        android:textSize="25sp"
        android:textColor="@color/black"/>

    <TextView
        android:id="@+id/textVes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Ves"
        android:textSize="18sp"
        android:textColor="@color/black"
        android:gravity="end"
        android:layout_alignBaseline="@+id/editVes"
        android:layout_alignBottom="@+id/editVes"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_toLeftOf="@+id/editVes"
        android:layout_toStartOf="@+id/editVes" />

    <TextView
        android:id="@+id/textPov"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Pov"
        android:layout_marginTop="40dp"
        android:textSize="18sp"
        android:textColor="@color/black"
        android:layout_below="@+id/editVes"
        android:layout_marginBottom="12dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:id="@+id/editVes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:inputType="number"
        android:layout_marginTop="30dp"
        android:layout_below="@+id/name"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignLeft="@+id/editPov"
        android:layout_alignStart="@+id/editPov" />

    <EditText
        android:id="@+id/editPov"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:layout_alignParentRight="true"
        android:inputType="number"
        android:layout_alignParentEnd="true"
        android:layout_toRightOf="@+id/textPov"
        android:layout_toEndOf="@+id/textPov"
        android:layout_above="@+id/textPM" />

    <TextView
        android:id="@+id/textPM"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textPov"
        android:text="@string/ProgPM"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:textColor="@color/black"
        android:layout_marginTop="30dp"
        android:textSize="20sp"
        android:gravity="center_horizontal"/>

    <EditText
        android:id="@+id/result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:layout_below="@+id/textPM"
        android:gravity="center_horizontal"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="20dp"/>

    <Button
        android:id="@+id/btnSc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnScet"
        android:textColor="@color/black"
        android:layout_above="@+id/btnDel"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="10dp"/>

    <Button
        android:id="@+id/btnDel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnDel"
        android:textColor="@color/black"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="20dp"/>
</RelativeLayout>